gitignore cleanup and more spacing fixes

--- a/Codeivore/assets/css/frontPage.css
+++ b/Codeivore/assets/css/frontPage.css
@@ -104,7 +104,7 @@ body p {
 	}
 
 	#name {
-		bottom: 60%;
+		top: -30%;
 	}
 
 	body p{
